Add cupcake description, ingredients & steps
This only added to recipe html to complete the
page for this recipe.

--- a/recipes/cupcake.html
+++ b/recipes/cupcake.html
@@ -8,5 +8,26 @@
         <h1>cupcake</h1>
         <a href ="../index.html">Home</a>
         <img src="../images/vegan-cupcake" alt="yummy vegan vanilla cupcake with frosting">
+        <h2>Description</h2>
+        <p>Ingredients</p>
+        <ul>
+            <li> 1 tablespoon apple cider vinegar
+            <li> 1 ½ cups almond milk
+            <li> 2 cups all-purpose flour
+            <li> 1 cup white sugar
+            <li> 2 teaspoons baking powder
+            <li> ½ teaspoon baking soda
+            <li> ½ teaspoon salt
+            <li> ½ cup coconut oil, warmed until liquid
+            <li> 1 ¼ teaspoons vanilla extract
+        </ul>
+        <p>Steps</p>
+        <ol>
+            <li>Gather the ingredients. Preheat the oven to 350 degrees F (175 degrees C).<br>Grease two 12-cup muffin pans or line with 18 paper baking cups.
+            <li>Pour apple cider vinegar into a 2-cup measuring cup. Fill with almond milk to make 1 1/2 cups.<br>Let stand until curdled, about 5 minutes.
+            <li>Whisk together flour, sugar, baking powder, baking soda, and salt in a large bowl.<br>Whisk together almond milk mixture, coconut oil, and vanilla in a separate bowl.<br>Pour wet ingredients into dry ingredients and stir just until blended.<br>Spoon batter evenly into the prepared cups.
+            <li>Bake in the preheated oven until tops spring back when lightly pressed, 15 to 20 minutes.<br>Cool in the pan set over a wire rack.
+            <li>Arrange cooled cupcakes on a serving platter. Frost with desired frosting.
+        </ol>
     </body>
 </html>
