Add new recipes html files and linkinging in index
To add more pages to websites so user can browse
different vegan recipes, added vegan brownie and
waffles html inside the recipe folder then it
was linked to the main index html file.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>ODIN-RECIPES</h1>
-        <a href ="recipes/cupcake.html">cupcake</a>
+        <ul>
+            <li><h2><a href ="recipes/cupcake.html">cupcake</a></h2></li>
+            <li><h2><a href="recipes/brownies.html">Brownies</a></h2></li>
+            <li><h2><a href="recipes/waffles.html">Waffles</a></h2></li>
+        </ul>
     </body>
 
 </html>
